Some loc and state files now having names instead of just numbers

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -1,5 +1,10 @@
 ﻿l_english:
  STATE_1:10 "Abu Dhabi"
+ STATE_2:10 "Kabul"
+ STATE_3:10 "Afghanistan"
+ STATE_4:10 "Algeria"
+ STATE_5:10 "Constantine"
+ STATE_6:10 "Ouargla"
  STATE_7:10 "Dessau"
  STATE_8:10 "Buenos Aires"
  STATE_9:10 "Corrientes"
@@ -11,6 +16,7 @@
  STATE_15:10 "Río Negro"
  STATE_16:10 "Patagonia Septentrional"
  STATE_17:10 "Patagonia Meridional"
+ STATE_18:10 "Atjeh"
  STATE_19:10 "Tirol"
  STATE_20:10 "Kärnten-Steiermark"
  STATE_21:10 "Österreich"
@@ -33,6 +39,7 @@
  STATE_38:10 "Dalmatia"
  STATE_39:10 "Slavonia"
  STATE_40:10 "East Galicia"
+ STATE_41:10 "Awadh"
  STATE_42:10 "Baden"
  STATE_45:10 "Kaiserlautern"
  STATE_46:10 "Oberbayern"
